<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.swipeclean.activity.RecycleBinActivity">

    <com.google.android.material.loadingindicator.LoadingIndicator
        android:id="@+id/v_loading"
        style="@style/Widget.Material3.LoadingIndicator.Contained"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/v_title_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/iv_back"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_vector_back"
            app:iconSize="24dp"
            app:iconTint="@color/text_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_main"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_back"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="十二月，2024" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/v_trash_bin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_title_bar"
        tools:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/v_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/v_divide"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/v_divide"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:background="@color/bg_line"
            app:layout_constraintBottom_toTopOf="@id/btn_empty_trash" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_empty_trash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/red_main"
            android:text="@string/clear_trash_bin"
            app:icon="@drawable/ic_vector_recyclebin"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toTopOf="@id/btn_restore_all" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_restore_all"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="12dp"
            android:text="@string/all_restore"
            android:textColor="@color/text_sub"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn_empty_trash"
            app:layout_constraintStart_toStartOf="@id/btn_empty_trash" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/v_complete"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_title_bar"
        tools:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/v_complete_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_complete"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/ic_vector_finish"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/great"
                android:textColor="?attr/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_complete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/space_optimized"
                android:textColor="@color/text_main"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_complete" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/v_free_up"
            android:layout_width="0dp"
            android:layout_height="148dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/ic_vector_card_free_up_bg"
            app:layout_constraintBottom_toTopOf="@+id/btn_got_it"
            app:layout_constraintEnd_toStartOf="@+id/v_deleted"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_complete_notice">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_free_up"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_vector_card_cleaned"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_free_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/release"
                android:textColor="@color/blue_main"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_free_up_size"
                app:layout_constraintStart_toStartOf="@id/iv_free_up"
                app:layout_constraintTop_toBottomOf="@id/iv_free_up" />

            <TextView
                android:id="@+id/tv_free_up_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_main"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/iv_free_up"
                app:layout_constraintTop_toBottomOf="@id/tv_free_up"
                tools:text="11.11 MB" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/v_deleted"
            android:layout_width="0dp"
            android:layout_height="148dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_vector_card_deleted_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/v_free_up"
            app:layout_constraintTop_toTopOf="@id/v_free_up">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_deleted"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_vector_card_deleted"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_deleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/delete"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_deleted_count"
                app:layout_constraintStart_toStartOf="@id/iv_deleted"
                app:layout_constraintTop_toBottomOf="@id/iv_deleted" />

            <TextView
                android:id="@+id/tv_deleted_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_main"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/iv_deleted"
                app:layout_constraintTop_toBottomOf="@id/tv_deleted"
                tools:text="1 Photo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_got_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="12dp"
            android:text="@string/complete"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>