<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.swipeclean.activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/v_title_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/app_name"
            android:textColor="@color/text_main"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sort_order"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:visibility="gone"
            app:icon="@drawable/ic_vector_sort"
            app:iconTint="@color/text_main"
            app:layout_constraintBottom_toBottomOf="@id/v_title_bar"
            app:layout_constraintEnd_toEndOf="@id/v_title_bar"
            app:layout_constraintTop_toTopOf="@id/v_title_bar"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/v_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_title_bar">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/v_cleaned"
            android:layout_width="0dp"
            android:layout_height="73dp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toStartOf="@id/v_completed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/bg_line">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_cleaned"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/ic_vector_card_cleaned"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_cleaned_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/cleaned"
                    android:textColor="@color/text_main"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@id/tv_cleaned_content"
                    app:layout_constraintStart_toEndOf="@id/iv_cleaned"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_cleaned_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:text="--"
                    android:textColor="@color/text_main"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_cleaned"
                    app:layout_constraintTop_toBottomOf="@id/tv_cleaned_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/v_completed"
            android:layout_width="0dp"
            android:layout_height="73dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/v_cleaned"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/bg_line">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_completed"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/ic_vector_card_completed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_completed_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/completed"
                    android:textColor="@color/text_main"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@id/tv_completed_content"
                    app:layout_constraintStart_toEndOf="@id/iv_completed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_completed_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="16dp"
                    android:text="-/-"
                    android:textColor="@color/text_main"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_completed"
                    app:layout_constraintTop_toBottomOf="@id/tv_completed_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/v_albums"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_cleaned"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_completed_progress"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="19dp"
                android:src="@drawable/ic_vector_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/blue_main" />

            <TextView
                android:id="@+id/tv_completed_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/completed"
                android:textColor="@color/text_main"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_completed_progress"
                app:layout_constraintStart_toEndOf="@+id/iv_completed_progress"
                app:layout_constraintTop_toTopOf="@+id/iv_completed_progress" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_deleted_progress"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="28dp"
                android:src="@drawable/ic_vector_circle"
                app:layout_constraintStart_toEndOf="@+id/tv_completed_progress"
                app:layout_constraintTop_toTopOf="@+id/iv_completed_progress"
                app:tint="@color/bg_progress_deleted" />

            <TextView
                android:id="@+id/tv_deleted_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/to_be_delete"
                android:textColor="@color/text_main"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_deleted_progress"
                app:layout_constraintStart_toEndOf="@+id/iv_deleted_progress"
                app:layout_constraintTop_toTopOf="@+id/iv_deleted_progress" />

            <View
                android:id="@+id/v_divide_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="47dp"
                android:background="@color/bg_line"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/v_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_divide_line" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/v_empty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_cleaned">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_empty"
                android:layout_width="158dp"
                android:layout_height="158dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/img_vector_empty_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_empty_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/no_pictures"
                android:textColor="@color/text_main"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_empty" />

            <TextView
                android:id="@+id/tv_empty_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:maxWidth="214dp"
                android:text="@string/no_pictures_notice"
                android:textColor="@color/text_sub"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_empty_title" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.loadingindicator.LoadingIndicator
            android:id="@+id/v_loading"
            style="@style/Widget.Material3.LoadingIndicator.Contained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>